(Format: Year/Month/Day)
Changes for 0.9.9:
*04/03/03:
  * Updated finnish locales for fluxbox-generate_menu (Thanks Lauri Hakkarainen)
*04/03/02:
  * fluxbox-generate_menu changes: (Han)
    * Updated German locales from Mathias Gumz
    * More firefox support.
    * Updated compat-notes.
*04/02/28:
  * Improved rendering speed when changing workspace or creating new window (Henrik)
    FbWinFrame.cc
  * Fixed bug in StringUtil::removeTrailingWhitespace (Thanks Mathias Gumz)
    StringUtil.cc
  * Fixed infinite loop in fbrun (Thanks Mathias Gumz)
    FbRun.cc
  * Added improved checking for compiler and compiler version (Henrik)
    version.h.in, main.cc
*04/02/26:
  * Improved transparent rendering speed in titlebar (Henrik)
    FbWinFrame.cc
  * Improved transparent rendering speed in Menu (Henrik)
    Menu.cc
  * Added CompareEqual class template that helps comparing
    accessor functions with PODs for containers
    CompareEqual.hh
*04/02/25:
  * Fixed cycling in tab completion for fbrun (Thanks Mathias Gumz)
    FbRun.cc
*04/02/20:
  * Added SendToNextWorkspace and SendToPrevWorkspace actions (Thanks Mathias Gumz)
    CurrentWindowCmd.hh/cc, FbCommandFactory.cc
  * Minor filename expansion fix (Thanks Mathias Gumz)
    and added '!' as a comment character in keys file
    fluxbox.cc, Workspace.cc, Slit.cc, Keys.cc
  * fixed focus issues with remember hidden (Thanks Mathias Gumz)
    Ewmh.cc, Gnome.cc, Screen.cc, Window.hh/cc, Remember.hh/cc
*04/02/18:
  * Change workspace when clicking on a window in iconbar that's on (Henrik)
    another workspace
    IconButton.cc
*04/02/16:
  * Added remember hidden state for apps (Thanks Mathias Gumz)
    You mark apps in the apps-file with
    [Hidden] {yes}
    With this you can configure any app to be hidden from the toolbar
    Remember.cc/hh, IconbarTool.cc
  * Fixed window size bug in no-decor windows on start/restart (Henrik)
    Window.cc
*04/02/14:
  * Fixed bug in _NET_MOVERESIZE_WINDOW (Henrik)
    Ewmh.cc